--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gatsby-transformer-bibtex",
   "description": "Gatsby transformer plugin for bibtex files",
   "author": "Sacha \"giltho\" Ayoun",
+  "version": "0.0.1",
   "license": "MIT",
   "keywords": [
     "gatsby",
